--- a/Shop_Кылосов.csproj
+++ b/Shop_Кылосов.csproj
@@ -67,11 +67,11 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Classes\Children.cs" />
-    <Compile Include="Classes\Electronics.cs" />
+    <Compile Include="Models\Children.cs" />
+    <Compile Include="Models\Electronics.cs" />
     <Compile Include="Classes\RepoItems.cs" />
-    <Compile Include="Classes\Shop.cs" />
-    <Compile Include="Classes\Sport.cs" />
+    <Compile Include="Models\Shop.cs" />
+    <Compile Include="Models\Sport.cs" />
     <Compile Include="Elements\Item.xaml.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
